tests/NormalTests/paczka1/small_fuzzy/65424114.err
Error in line 1: PiM0YQnY7 A377 73,0
Error in line 6: gaUa S446 61,1
Error in line 8: gaUa A817 75,5
